Make Academy default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -17,10 +17,10 @@
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs]{ubook}
 
 % various font families
-\tunemarkuptag{garamond}
+%\tunemarkuptag{garamond}
 %\tunemarkuptag{goudy}
 %\tunemarkuptag{minionpro}
-%\tunemarkuptag{academy}
+\tunemarkuptag{academy}
 %\tunemarkuptag{palatino}
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
