Tidy up the title page for text edition build

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -50,10 +50,10 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \itshape
-The Standard Reference Text in British English\tunemarkuptwo{nofnt}{\\}{%
+The Standard Reference Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
 with Metric Measures, Textual Variants,\\
-Study Notes \&\ \totalfigures\ Illustrations\\[1pt]
+Study Notes \&\ \totalfigures\ Illustrations\\[2ex]
 }
 \tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\[1pt]}
 Edited by Tigran Aivazian\\[2ex]
@@ -77,14 +77,14 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\parbox{7cm}{\tunemarkuptwo{pgkindledx}{\Large}{\normalsize}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}
+\begin{center}\parbox{7cm}{\tunemarkuptwo{pgkindledx}{\Large}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book \serpimolot\\
-The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
+The text of the Urantia Papers is in the public domain}.\\[5pt]
 \tunemarkuptwo{nofnt}{}{Cover design by Gary Tonge, www.vision-afar.com.\\}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
