Sort out page breaks before Part title pages

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -6,15 +6,14 @@
 \normalem
 \pagenumbering{arabic}
 \pagestyle{empty}
-\include{tex/title}\newpage
-\pagestyle{fancy}
+\include{tex/title}
+\newpage\pagestyle{fancy}
 \tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 %\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
-\newpage
 \tunemarkup{introinclude}{\include{tex/intro}}
 \include{tex/p000}
 \include{tex/p001}
