--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1016,7 +1016,6 @@
 }
 
 \newcommand{\upaper}[2]{%
-\newpage\thispagestyle{empty}%
 \par\vskip1ex\pagebreak[3]%
 \setcounter{paper}{#1}%
 \setcounter{secnum}{0}%
@@ -1033,6 +1032,7 @@
 }
 
 \newcommand{\parti}{%
+\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partitxt\\\partiup\\[2ex]}
 \begin{center}\subfont\partisub\end{center}%
@@ -1041,6 +1041,7 @@
 }
 
 \newcommand{\partii}{%
+\newpage\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partiitxt\\\partiiup\\[2ex]}
 \begin{center}\subfont\partiisub\end{center}%
@@ -1049,6 +1050,7 @@
 }
 
 \newcommand{\partiii}{%
+\newpage\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partiiitxt\\\partiiiup\\[2ex]}
 \begin{center}\subfont\partiiisub\end{center}%
@@ -1057,6 +1059,7 @@
 }
 
 \newcommand{\partiv}{%
+\newpage\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partivtxt\\\partivup\\[2ex]}
 \begin{center}\subfont\partivsubone\\[2ex]\partivsubtwo\end{center}%
