Add support for Charter ITC typeface

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -34,6 +34,7 @@
 %\tunemarkuptag{cent}
 %\tunemarkuptag{adamant}
 %\tunemarkuptag{swift}
+%\tunemarkuptag{charter}
 
 % comment out for public PDF build
 %\tunemarkuptag{private}
@@ -254,8 +255,8 @@
 \def\urantiaexplfont{Fedra Serif A Pro Book}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{14}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{14/19}
+\newcommand{\bibbookend}{\fontsize{13}{18}\selectfont}
+\newcommand{\urantiamainfontsize}{13/18}
 }
 
 \tunemarkup{cent}{%
@@ -294,6 +295,20 @@
 \def\urantiaheadingfont{Arial Narrow Bold}
 \def\urantiaheaderackfont{Swift}
 \def\urantiaexplfont{Swift}
+\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
+\newcommand{\bibbookend}{\fontsize{15}{18}\selectfont}
+\newcommand{\urantiamainfontsize}{15/18}
+}
+
+\tunemarkup{charter}{%
+\def\urantiamainfont{CharterITC}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
+\def\urantiatitlefont{CharterITC}
+\def\urantiaheaderfont{CharterITC}
+\def\urantiaheadingfont{Arial Narrow Bold}
+\def\urantiaheaderackfont{CharterITC}
+\def\urantiaexplfont{CharterITC}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \newcommand{\bibbookend}{\fontsize{15}{18}\selectfont}
