Add 3 additional typefaces

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -35,6 +35,9 @@
 %\tunemarkuptag{adamant}
 %\tunemarkuptag{swift}
 %\tunemarkuptag{charter}
+%\tunemarkuptag{bliss}
+%\tunemarkuptag{maiola}
+%\tunemarkuptag{newjournal}
 
 % comment out for public PDF build
 %\tunemarkuptag{private}
@@ -73,8 +76,8 @@
 \def\urantiaexplfont{Garamond Premier Pro Medium Italic}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{17/20}
+\newcommand{\bibbookend}{\fontsize{18}{21}\selectfont}
+\newcommand{\urantiamainfontsize}{18/21}
 }
 
 \tunemarkup{goudy}{%
@@ -87,8 +90,8 @@
 \def\urantiaexplfont{GoudyOlSt BT}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{19.6}\selectfont}
-\newcommand{\urantiamainfontsize}{17/19.6}
+\newcommand{\bibbookend}{\fontsize{17}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{17/20}
 }
 
 \tunemarkup{minionpro}{%
@@ -129,8 +132,8 @@
 \def\urantiaexplfont{Palatino Linotype}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{15}{18}\selectfont}
-\newcommand{\urantiamainfontsize}{15/18}
+\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{16/19}
 }
 
 \tunemarkup{oldstandard}{%
@@ -157,8 +160,8 @@
 \def\urantiaexplfont{Gentium Book Basic}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{17/21}
+\newcommand{\bibbookend}{\fontsize{16}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{16/20}
 }
 
 \tunemarkup{bookman}{%
@@ -185,8 +188,8 @@
 \def\urantiaexplfont{Arno Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{17/21}
+\newcommand{\bibbookend}{\fontsize{17}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{17/20}
 }
 
 \tunemarkup{century}{%
@@ -213,8 +216,8 @@
 \def\urantiaexplfont{Cambria}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{16/21}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
 }
 
 \tunemarkup{agora}{%
@@ -227,8 +230,8 @@
 \def\urantiaexplfont{PF Agora Serif Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{15/19}
+\newcommand{\bibbookend}{\fontsize{14}{18}\selectfont}
+\newcommand{\urantiamainfontsize}{14/18}
 }
 
 \tunemarkup{newton}{%
@@ -241,8 +244,8 @@
 \def\urantiaexplfont{Newton}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{16/20}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
 }
 
 \tunemarkup{fedra}{%
@@ -269,8 +272,8 @@
 \def\urantiaexplfont{21 Cent}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{16/20}
+\newcommand{\bibbookend}{\fontsize{14}{18}\selectfont}
+\newcommand{\urantiamainfontsize}{14/18}
 }
 
 \tunemarkup{adamant}{%
@@ -283,8 +286,8 @@
 \def\urantiaexplfont{PF Adamant Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{14}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{14/19}
+\newcommand{\bibbookend}{\fontsize{13}{16}\selectfont}
+\newcommand{\urantiamainfontsize}{13/16}
 }
 
 \tunemarkup{swift}{%
@@ -313,6 +316,48 @@
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \newcommand{\bibbookend}{\fontsize{15}{18}\selectfont}
 \newcommand{\urantiamainfontsize}{15/18}
+}
+
+\tunemarkup{bliss}{%
+\def\urantiamainfont{Bliss Pro}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
+\def\urantiatitlefont{Bliss Pro}
+\def\urantiaheaderfont{Bliss Pro}
+\def\urantiaheadingfont{Arial Narrow Bold}
+\def\urantiaheaderackfont{Bliss Pro}
+\def\urantiaexplfont{Bliss Pro}
+\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
+\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{16/19}
+}
+
+\tunemarkup{maiola}{%
+\def\urantiamainfont{MaiolaPro}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
+\def\urantiatitlefont{MaiolaPro}
+\def\urantiaheaderfont{MaiolaPro}
+\def\urantiaheadingfont{Arial Narrow Bold}
+\def\urantiaheaderackfont{MaiolaPro}
+\def\urantiaexplfont{MaiolaPro}
+\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
+\newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{18/20}
+}
+
+\tunemarkup{newjournal}{%
+\def\urantiamainfont{NewJournal}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
+\def\urantiatitlefont{NewJournal}
+\def\urantiaheaderfont{NewJournal}
+\def\urantiaheadingfont{Arial Narrow Bold}
+\def\urantiaheaderackfont{NewJournal}
+\def\urantiaexplfont{NewJournal}
+\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
+\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{16/19}
 }
 
 % Google Nexus 7 (or any Android 7" colour device)
